[project]
name = "adv-rl"
version = "0.1.0"
description = ""
authors = [{ name = "melikbugra", email = "melikbugraozcelik@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "gymnasium[other] (>=1.2.0,<2.0.0)",
    "stable-baselines3 (>=2.7.0,<3.0.0)",
    "continuous-maze-env @ git+https://github.com/melikbugra/continuous-maze-env.git",
    "rl-baselines @ git+https://github.com/melikbugra/rl-baselines.git",
    "gymnasium-robotics @ file:///home/melik/Gymnasium-Robotics",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = ["ipykernel (>=6.30.1,<7.0.0)"]

[tool.poetry.dependencies]
gymnasium-robotics = {develop = true}
